Update colors to correct contrast ratios.

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -32,11 +32,11 @@ header {
 h1,
 h2 {
     font-family: var(--heading-font);
-    color: var(--secondary-color);
+    color: var(--accent2-color);
 }
 
 nav ul li a {
-    color: var(--secondary-color);
+    color: var(---accent2-color);
 }
 
 nav,
@@ -71,7 +71,7 @@ article {
     width: 100%;
     padding: 16px;
     opacity: 0.7;
-    background-color: var(--accent-color);
+    background-color: var(--accent1-color);
     color: white;
     /* white text - make sure there is enough contrast with the background-color */
 }
